Cors error dealt with. Product controllers services and repository started